--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vuepress-theme-default-rtl": "^1.0.1"
   },
   "dependencies": {
+    "@vssue/api-github-v3": "^1.4.7",
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "mermaid": "^8.10.1"
   }
 }
