--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -14,4 +14,4 @@ jobs:
           TARGET_REPO: konar-studio/index
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn && yarn build
-          BUILD_DIR: src/.vuepress/dist/
+          BUILD_DIR: docs/.vuepress/dist/
